# LLM2

./: .coveragerc  .env.example  .gitignore  Makefile  Pipfile  README copy.md  README.md  RESUME_GUIDE.md  conda-environment.yml  debug_ollama_error.py  git_auto_push.bat  main copy 2.py  main copy 3.py  main copy 4.py  main copy.py  main.py  monitor_memory.py  project.txt  pyproject.toml  pytest.ini  requirements copy 2.txt  requirements copy 3.txt  requirements copy.txt  requirements-add.txt  requirements-dev.txt  requirements-gpu.txt  requirements-minimal.txt  requirements.txt  resume_session.py  run_app.py  save_project_state.py  setup.py  test_available_models.py  test_basic_functionality.py  test_integration.py  test_integration_complete.py  test_integration_final.py  test_llm_real.py  test_local_llm.py  test_ollama_connection.py  (+1 more)
.github/workflows/: tests.yml
assets/themes/: custom_theme.json  dark_theme.json  light_theme.json
config/: __init__.py  app_config.yaml  config_migrator.py  config_schema.py  config_validator.py  default_config.json  default_settings copy 2.json  default_settings.json  gui_settings.json  llm_config_manager.py  logging_config copy.yaml  logging_config.yaml  schema.json
config/examples/: anthropic_config.json  multi_provider_config.json  openai_config.json
data/: __init__.py
data/examples/: __init__.py  demo_code.py  sample_project.json
data/templates/: __init__.py  html_page.html.template  javascript_component.js.template  python_class.py.template  python_function.py.template
docs/: __init__.py  api_reference.md  architecture.md  development_guide.md  user_guide.md
plugins/: __init__.py  base_plugin.py
plugins/code_formatter/: __init__.py  formatter_plugin.py  language_formatters.py  main.py
plugins/export_tools/: __init__.py  export_formats.py  export_plugin.py
plugins/git_integration/: __init__.py  git_commands.py  git_plugin.py
plugins/sample_plugin/: main.py
scripts/: README.md  build.py  deploy.py  dev.py  setup_dev.py  start.bat  start.py  start.sh  test_runner.py
src/: __init__.py  llm_client_v2.py  main.py  main_bk.txt  model_selector.py  ollama_client copy.py  ollama_client.py
src/core/: __init__ copy.py  __init__.py  config_manager copy 2.py  config_manager copy 3.py  config_manager copy.py  config_manager.py  config_manager_bk.txt  config_manager_bk2.txt  config_manager_bk3.txt  context_builder.py  conversation_manager.py  error_handler.py  event_system copy.py  event_system.py  event_system_bk.txt  exceptions copy 2.py  exceptions copy.py  exceptions.py  file_manager.py  llm_interface.py  logger copy 2.py  logger copy.py  logger.py  logger_bk.txt  plugin_manager.py  plugin_manager_bk.txt  plugin_manager_bk2.txt  project_manager.py  prompt_builder.py  singleton.py  template_engine.py  template_engine_bk.txt  vector_store.py
src/database/: __init__.py  database_manager.py
src/file_processing/: file_loader.py
src/llm/: __init__.py  base_llm copy.py  base_llm.py  claude_client.py  llm_factory.py  llm_factory.txt  llm_service.py  local_llm.py  local_llm_client.py  local_llm_client.txt  local_llm_client_bk.txt  openai_client.py  prompt_templates copy.py  prompt_templates.py  response_parser.py
src/plugins/: __init__.py  base_plugin.py
src/plugins/code_formatter/: __init__.py  formatter_plugin.py  language_formatters.py
src/plugins/export_tools/: __init__.py  export_formats.py
src/plugins/git_integration/: __init__.py
src/security/: config_encryption.py
src/services/: __init__.py  file_service.py  llm_service.py  project_service.py
src/ui/: __init__.py  about_dialog.py  chat_interface.py  chat_panel.py  cli.py  code_editor.py  code_viewer.py  file_manager.py  file_tree.py  find_replace_dialog.py  gui.py  llm_chat_panel.py  main_window.py  main_window_bk.txt  main_window_bk2.txt  main_window_bk3.txt  output_panel.py  progress_dialog.py  project_tree.py  qt_app.py  settings_dialog.py
src/ui/components/: auto_complete.py  chat_message_widget.py  custom_widgets.py  model_selector_widget.py  prompt_template_widget.py  syntax_highlighter.py  theme_manager.py
src/utils/: __init__.py  backup_utils.py  code_parser.py  encryption_utils.py  file_utils.py  performance_monitor.py  system_utils.py  text_utils.py  validation_utils.py
templates/: code_explanation.json  code_generation_basic.json  code_review_comprehensive.json  code_translation.json  debug_assistance.json  documentation_generation.json  general_chat.json  general_question.json
tests/: __init__.py  conftest.py  generate_report.py  run_tests.py  test_e2e.py
tests/test_core/: __init__.py  test_config_manager.py  test_file_manager.py  test_project_manager.py  test_template_engine.py
tests/test_llm/: test_base_llm.py  test_claude_client.py  test_llm_factory.py  test_openai_client.py
tests/test_ui/: __init__.py  test_code_editor.py  test_main_window.py  test_settings_dialog.py
tests/test_utils/: __init__.py  test_file_utils.py  test_text_utils.py  test_validation_utils.py
